After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 596007 - fix compile warnings
fix compile warnings
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: unknown
unspecified
Other All
: Normal normal
: ---
Assigned To: Anjuta maintainers
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2009-09-22 20:41 UTC by Carl-Anton Ingmarsson
Modified: 2009-10-10 08:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
remove some unused variables (3.91 KB, patch)
2009-09-22 20:41 UTC, Carl-Anton Ingmarsson
accepted-commit_now Details | Review
sourceview: don't use deprecated gtk_source_view_set_mark_category_pixbuf () (3.08 KB, patch)
2009-09-22 20:41 UTC, Carl-Anton Ingmarsson
accepted-commit_now Details | Review
remove unused functions (7.36 KB, patch)
2009-09-22 20:41 UTC, Carl-Anton Ingmarsson
accepted-commit_now Details | Review

Description Carl-Anton Ingmarsson 2009-09-22 20:41:35 UTC
I've attached three patches to fix some compile warnings. The first two should
be pretty unobtrusive. The third one removes some unused functions but I don't
know if some of them should be kept.
Comment 1 Carl-Anton Ingmarsson 2009-09-22 20:41:37 UTC
Created attachment 143749 [details] [review]
remove some unused variables
Comment 2 Carl-Anton Ingmarsson 2009-09-22 20:41:41 UTC
Created attachment 143750 [details] [review]
sourceview: don't use deprecated gtk_source_view_set_mark_category_pixbuf ()
Comment 3 Carl-Anton Ingmarsson 2009-09-22 20:41:44 UTC
Created attachment 143751 [details] [review]
remove unused functions
Comment 4 Johannes Schmid 2009-09-24 15:02:31 UTC
I think the function mentioned in comment #3 are replaced by stuff in the new cxxparser branch. Thus I also pushed that patch! Thanks a lot!
Comment 5 Sébastien Granjoux 2009-10-10 08:57:03 UTC
It seems that everything is in git so I'm closing this bug.