remove some unused variables

https://bugzilla.gnome.org/show_bug.cgi?id=596007