plugins/debug-manager/sparse_view.c
@@ -218,7 +218,6 @@ dma_sparse_view_goto_activate (GtkWidget   *menu_item,
 	GtkWidget *toplevel;
 	GtkWidget *frame;
 	GtkWidget *vbox;
-	GtkWidget *icon;
 	
 	toplevel = gtk_widget_get_toplevel (GTK_WIDGET (view));
 	
